{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 39,
  "lineage": "175ff14a-45a4-ec8e-7db3-2775f208cc4d",
  "resources": [
    {
      "module": "module.cloudsim",
      "mode": "data",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:091317146178:security-group/sg-0bdebbbeb5f6372a8",
            "description": "allow inbound access from the public network",
            "filter": null,
            "id": "sg-0bdebbbeb5f6372a8",
            "name": "cloudsim-security-group",
            "tags": {
              "iac_tool": "Terraform",
              "project_name": "cloudsim"
            },
            "vpc_id": "vpc-0cf1164e9936ca01e"
          }
        }
      ]
    },
    {
      "module": "module.cloudsim",
      "mode": "data",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:091317146178:subnet/subnet-093baeb314700b73e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "id": "subnet-093baeb314700b73e",
            "map_public_ip_on_launch": true,
            "owner_id": "091317146178",
            "state": "available",
            "tags": {
              "iac_tool": "Terraform",
              "project_name": "cloudsim"
            },
            "vpc_id": "vpc-0cf1164e9936ca01e"
          }
        }
      ]
    },
    {
      "module": "module.cloudsim",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:091317146178:vpc/vpc-0cf1164e9936ca01e",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-038e385b059e156ca",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-43aa5828",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cf1164e9936ca01e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02ca58981767746b9",
            "owner_id": "091317146178",
            "state": "available",
            "tags": {
              "iac_tool": "Terraform",
              "project_name": "cloudsim"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-04c14ab2aceaf3044",
            "owner_id": "091317146178",
            "tags": {
              "iac_tool": "Terraform",
              "project_name": "cloudsim"
            },
            "vpc_id": "vpc-0cf1164e9936ca01e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0cc56096554e4ffc7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "091317146178",
            "subnet_id": null,
            "subnet_ids": [],
            "tags": {},
            "vpc_id": "vpc-0cf1164e9936ca01e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "egress_default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1564331823",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0cc56096554e4ffc7",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "ingress_default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4031955723",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0cc56096554e4ffc7",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04c14ab2aceaf3044",
            "id": "r-rtb-02ca58981767746b91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02ca58981767746b9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:091317146178:security-group/sg-0bdebbbeb5f6372a8",
            "description": "allow inbound access from the public network",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bdebbbeb5f6372a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 23001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 23002
              }
            ],
            "name": "cloudsim-security-group",
            "name_prefix": null,
            "owner_id": "091317146178",
            "revoke_rules_on_delete": false,
            "tags": {
              "iac_tool": "Terraform",
              "project_name": "cloudsim"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf1164e9936ca01e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:091317146178:subnet/subnet-093baeb314700b73e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-093baeb314700b73e",
            "map_public_ip_on_launch": true,
            "owner_id": "091317146178",
            "tags": {
              "iac_tool": "Terraform",
              "project_name": "cloudsim"
            },
            "vpc_id": "vpc-0cf1164e9936ca01e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:091317146178:vpc/vpc-0cf1164e9936ca01e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cffdc420e2e887c0",
            "default_route_table_id": "rtb-02ca58981767746b9",
            "default_security_group_id": "sg-0edcbd070d3d473d4",
            "dhcp_options_id": "dopt-43aa5828",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cf1164e9936ca01e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02ca58981767746b9",
            "owner_id": "091317146178",
            "tags": {
              "iac_tool": "Terraform",
              "project_name": "cloudsim"
            }
          }
        }
      ]
    }
  ]
}